--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="password_hint">Tu Contraseña</string>
     <string name="remember_lbl">Recuerdame</string>
     <string name="password_recovery">¿Olvidaste la Pass?</string>
+    <string name="login_with">Login Social</string>
 </resources>
