ADD: AuthActivity + Fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="remember_lbl">Recuerdame</string>
     <string name="password_recovery">¿Olvidaste la Pass?</string>
     <string name="login_with">Login Social</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
