--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,12 @@
     <string name="login_with">Login Social</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="rasgos">
+        <item>Higiene</item>
+        <item>Dinero</item>
+        <item>Carisma</item>
+        <item>Elocuencia</item>
+        <item>Social</item>
+        <item>Responsable</item>
+    </string-array>
 </resources>
