--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="login_with">Login Social</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="current_value_comment_label">Tu valor es %d de %s </string>
     <string-array name="rasgos">
         <item>Higiene</item>
         <item>Dinero</item>
